--- a/HtmlLiveEditor.html
+++ b/HtmlLiveEditor.html
@@ -83,7 +83,7 @@ HTML Live EDITOR
       <span class="windowLabel" id="iframeLabel">Preview</span>
       <span id="iframeClose">&times;</span>
     </div>
-    <footer style='font-size:70%;margin:20px 20px 0;color:#777'>Copyright &#169; <script>document.write((new Date()).getFullYear());</script> <b>HTML Live Editor</b> | Created by: <a style="text-decoration:none;color:#777" href='https://github.com/Nendenpio' target='_blank' title='ShannenPio'><b>ShannenPio</b></a> | Developed by: <a style="text-decoration:none;color:#777" title='Shannen Pio' href='https://www.blogsgoblog.com' target='_blank'><b>Shannen Pio</b></a></footer>
+    <footer style='font-size:70%;margin:20px 20px 0;color:#777'>Copyright &#169; <script>document.write((new Date()).getFullYear());</script> <b>HTML Live Editor</b> | Created by: <a style="text-decoration:none;color:#777" href='https://github.com/Nendenpio' target='_blank' title='ShannenPio'><b>ShannenPio</b></a> | Developed by: <a style="text-decoration:none;color:#777" title='Shannen Pio' href='https://shannenpio.blogspot.com' target='_blank'><b>Shannen Pio</b></a></footer>
   </section>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="https://cdn.staticaly.com/gh/KompiAjaib/HTML-Live-Editor/master/js/ace/ace.js" type="text/javascript" charset="utf-8"></script>
